--- a/themes/montessori-theme/sass/_elements.scss
+++ b/themes/montessori-theme/sass/_elements.scss
@@ -9,7 +9,37 @@ html {
   font-family: $font_main;
 	@include font-size(1);
 }
+////Montessori Elements behaviours////
+p,
+li {
+	 font-size: $font_body_size_mob;
+}
+h1,h2,h3{
+ text-transform: capitalize;
+}
 
+h1{font-size:$h1_size_mob;
+font-family:$font_title}
+h2{
+font-size:$h2_size_mob;
+}
+h3{
+ font-size:$h3_size_mob;
+}
+
+@include desktop{
+ p,
+ li {
+		font-size: $font_body_size_desktop;}
+ h1{font-family:$font_title;
+	 font-weight: lighter;
+	 font-size:$h1_size_desktop;}
+ h2{
+ font-size:$h2_size_desktop;}
+ h3{
+	 font-size:$h3_size_desktop;
+}}
+//////////////////////////////
 *,
 *:before,
 *:after {
