--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -287,20 +287,23 @@ html {
 
 p,
 li {
-  font-size: 1.6rem; }
+  font-size: 1.6rem;
+  font-family: "Asap"; }
 
 h1, h2, h3 {
-  text-transform: capitalize; }
+  text-transform: capitalize;
+  font-family: "Asap";
+  font-weight: lighter; }
 
 h1 {
-  font-size: 2.5rem;
-  font-family: "Asap"; }
+  font-size: 2.5rem; }
 
 h2 {
   font-size: 2rem; }
 
 h3 {
-  font-size: 1.5rem; }
+  font-size: 1.5rem;
+  font-family: "Asap"; }
 
 @media (min-width: 60rem) {
   p,
@@ -1235,7 +1238,7 @@ body {
     overflow: visible; }
     @media (min-width: 60rem) {
       .main-history p:nth-child(4) {
-        margin-left: 0px; } }
+        margin-left: 0; } }
   .main-history .history-img {
     -ms-flex-item-align: start;
         align-self: flex-start;
@@ -1263,7 +1266,7 @@ body {
         .main-history .red-border-q p {
           font-size: 2rem;
           margin: 0; }
-      .main-history .red-border-q ::before {
+      .main-history .red-border-q::before {
         content: "";
         display: block;
         position: absolute;
@@ -1277,7 +1280,7 @@ body {
 
 .main-philosophy {
   margin: 100px auto;
-  max-width: 90%;
+  width: 70%;
   height: auto;
   display: flex;
   display: -ms-flexbox;
@@ -1290,34 +1293,29 @@ body {
   position: relative; }
   @media (min-width: 60rem) {
     .main-philosophy {
-      max-width: 950px;
       height: 640px; } }
   .main-philosophy div {
     width: 100%; }
   .main-philosophy .philosophy-grid {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-align: center;
-    align-items: center;
-    -ms-flex-pack: distribute;
-    justify-content: space-around;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    position: relative;
+    -ms-flex: 0 0 auto;
+        flex: 0 0 auto;
     width: 200px;
     height: 200px;
     background-color: #AFF1D3;
     margin-top: 20px;
     display: flex;
     display: -ms-flexbox;
-    align-items: center;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    -ms-flex-align: center;
+        align-items: center;
+    -ms-flex-pack: justify;
+        justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     position: relative; }
     @media (min-width: 60rem) {
       .main-philosophy .philosophy-grid {
-        width: 300px;
-        height: 300px;
+        width: 310px;
+        height: 310px;
         background-color: #AFF1D3;
         -webkit-transition: 3s;
         -webkit-transform-style: preserve-3d;
@@ -1360,21 +1358,25 @@ body {
             backface-visibility: hidden; } }
     .main-philosophy .philosophy-grid h2 {
       z-index: 1;
+      margin: 0;
       text-align: center;
       display: inline-block;
-      width: 95%;
-      color: #248E6A;
-      -ms-flex-direction: row;
-          flex-direction: row;
-      padding-bottom: 0;
-      font-size: 1rem;
+      width: 90%;
+      color: #248e6a;
       height: auto;
       overflow: hidden;
-      padding: 20px;
-      bottom: -18px;
-      line-height: 1.2;
+      padding: 0;
+      bottom: 32px;
+      line-height: 1.3rem;
+      position: absolute;
       position: absolute; }
+      .main-philosophy .philosophy-grid h2 a {
+        color: #248E6A;
+        font-size: 1.2rem;
+        font-weight: bold; }
       @media (min-width: 60rem) {
+        .main-philosophy .philosophy-grid h2 a {
+          font-size: 1.7rem; }
         .main-philosophy .philosophy-grid h2 .show {
           font-size: 1.4rem;
           -webkit-backface-visibility: hidden;
@@ -1461,7 +1463,7 @@ body {
       font-weight: bold; }
       .materials-contents .red-border-q p {
         margin: 0; }
-    .materials-contents .red-border-q ::before {
+    .materials-contents .red-border-q::before {
       content: "";
       display: block;
       position: absolute;
@@ -1476,8 +1478,8 @@ body {
       align-self: left; }
 
 .materials-grid {
-  margin: 0px;
-  padding: 0px; }
+  margin: 0;
+  padding: 0; }
 
 .benefits li {
   list-style-type: disc; }
@@ -1524,7 +1526,7 @@ body {
         position: relative;
         font-size: 1.1rem;
         font-weight: bold; }
-      .benefits-content .red-border-q ::before {
+      .benefits-content .red-border-q::before {
         content: "";
         display: block;
         position: absolute;
