--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -302,7 +302,7 @@ h2 {
   font-size: 2rem; }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   font-family: "Asap"; }
 
 @media (min-width: 60rem) {
@@ -316,7 +316,7 @@ h3 {
   h2 {
     font-size: 2.2rem; }
   h3 {
-    font-size: 2rem; } }
+    font-size: 1.7rem; } }
 
 *,
 *:before,
@@ -1216,7 +1216,7 @@ body {
 # Montessori
 --------------------------------------------------------------*/
 .history-content {
-  width: 80%;
+  width: 100%;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   margin-left: 30px; }
@@ -1273,7 +1273,7 @@ body {
         top: 5PX;
         left: 0PX;
         height: 100%;
-        border-left: solid 8px #D93B57; } }
+        border-left: solid 12px #D93B57; } }
   .main-history p {
     padding-top: 4px;
     text-align: left; }
@@ -1314,8 +1314,8 @@ body {
     position: relative; }
     @media (min-width: 60rem) {
       .main-philosophy .philosophy-grid {
-        width: 310px;
-        height: 310px;
+        width: 300px;
+        height: 300px;
         background-color: #AFF1D3;
         -webkit-transition: 3s;
         -webkit-transform-style: preserve-3d;
@@ -1418,6 +1418,12 @@ body {
     -ms-flex-direction: row-reverse;
         flex-direction: row-reverse; } }
 
+.main-materials div:nth-of-type(1) img {
+  display: none; }
+
+.main-materials div:nth-of-type(1) .materials-contents {
+  width: 90%; }
+
 .materials {
   margin-top: 60px;
   width: 100%;
@@ -1444,41 +1450,42 @@ body {
     height: 230px; }
     @media (min-width: 60rem) {
       .materials img {
-        margin: 40px 0 0 40px;
+        margin-top: 100px;
         width: 300px;
         height: 300px; } }
 
-@media (min-width: 60rem) {
-  .materials-contents {
-    width: 60%;
-    font-size: 1.5rem; }
-    .materials-contents .red-border-q {
-      width: 75%;
-      top: 10px;
-      margin: 0 0 0 10%;
-      padding-left: 25px;
-      display: inline-block;
-      position: relative;
-      font-size: 1.1rem;
-      font-weight: bold; }
-      .materials-contents .red-border-q p {
-        margin: 0; }
-    .materials-contents .red-border-q::before {
-      content: "";
-      display: block;
-      position: absolute;
-      top: 5PX;
-      left: 0PX;
-      height: 100%;
-      border-left: solid 8px #D93B57; } }
+.materials-contents {
+  width: 100%; }
+  @media (min-width: 60rem) {
+    .materials-contents {
+      width: 60%;
+      font-size: 1.5rem; }
+      .materials-contents .red-border-q {
+        width: 75%;
+        top: 10px;
+        margin: 0 0 0 10%;
+        padding-left: 25px;
+        display: inline-block;
+        position: relative; }
+        .materials-contents .red-border-q p {
+          margin: 0;
+          font-size: 2rem; }
+      .materials-contents .red-border-q::before {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 5PX;
+        left: 0PX;
+        height: 100%;
+        border-left: solid 12px #D93B57; } }
 
-.materials-grid img:nth-of-type(2) {
+.materials-grid div:nth-of-type(2) {
   -ms-flex-item-align: left;
       -ms-grid-row-align: left;
       align-self: left; }
 
 .materials-grid {
-  margin: 0;
+  margin: 40px 0;
   padding: 0; }
 
 .benefits li {
@@ -1507,33 +1514,30 @@ body {
       .first-benefits-section img {
         -ms-flex-item-align: start;
             align-self: flex-start;
-        width: 350px;
-        height: 350px;
+        width: 330px;
+        height: 330px;
         margin: 0 40px 20px 0; } }
 
 .benefits-content {
   width: 100%; }
   @media (min-width: 60rem) {
-    .benefits-content {
-      max-width: 80%;
-      font-size: 1.5rem; }
-      .benefits-content .red-border-q {
-        width: 75%;
-        top: 10px;
-        margin: 0 0 0 10%;
-        padding-left: 25px;
-        display: inline-block;
-        position: relative;
-        font-size: 1.1rem;
-        font-weight: bold; }
-      .benefits-content .red-border-q::before {
-        content: "";
-        display: block;
-        position: absolute;
-        top: 5PX;
-        left: 0PX;
-        height: 100%;
-        border-left: solid 8px #D93B57; } }
+    .benefits-content .red-border-q {
+      width: 75%;
+      top: 10px;
+      margin: 0 0 0 10%;
+      padding-left: 25px;
+      display: inline-block;
+      position: relative; }
+      .benefits-content .red-border-q p {
+        font-size: 2rem; }
+    .benefits-content .red-border-q::before {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 5PX;
+      left: 0PX;
+      height: 100%;
+      border-left: solid 12px #D93B57; } }
 
 .benefits-title p {
   padding-top: 4px;
