--- a/themes/montessori-theme/sass/_front-page.scss
+++ b/themes/montessori-theme/sass/_front-page.scss
@@ -1,4 +1,4 @@
-//front page
+// front page
 // media screen for mobile (max-width: 480px)
 // .site-main {
 //   margin: 0;
@@ -398,11 +398,11 @@
 //             text-decoration: none;
 //         }
 //     }
-// // }
-// // a {
-// //     text-decoration: none;
-// // }
-// // body {
-// //     background-color: #ffffff;
-// // }
+// }
+// a {
+//     text-decoration: none;
+// }
+// body {
+//     background-color: #ffffff;
+// }
 /***************************************************/
