--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -233,11 +233,40 @@ th {
 /*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
-/******* Headings *****/
-h1, h2, h3, h4, h5, h6, button {
-  font-weight: bold;
-  padding: 1rem 0; }
+p,
+li {
+  font-size: 1.6rem;
+  font-family: "Asap"; }
 
+h1, h2, h3 {
+  text-transform: capitalize;
+  font-family: "Asap";
+  font-weight: lighter; }
+
+h1 {
+  font-size: 2.5rem; }
+
+h2 {
+  font-size: 2rem; }
+
+h3 {
+  font-size: 1.3rem;
+  font-family: "Asap"; }
+
+@media (min-width: 60rem) {
+  p,
+  li {
+    font-size: 1.7rem; }
+  h1 {
+    font-family: "Asap";
+    font-weight: lighter;
+    font-size: 3rem; }
+  h2 {
+    font-size: 2.2rem; }
+  h3 {
+    font-size: 1.7rem; } }
+
+/******* Headings *****/
 body,
 button,
 input,
@@ -254,9 +283,6 @@ h1, h2, h3, h4, h5, h6 {
   clear: both; }
 
 /* Copy */
-p {
-  margin-bottom: 1rem; }
-
 dfn, cite, em, i {
   font-style: italic; }
 
@@ -663,7 +689,7 @@ div .menu-primary-menu-container {
   z-index: 999;
   min-width: 37.5rem;
   width: 100%;
-  background: rgba(255, 255, 255, 0.7);
+  background: #fff;
   position: fixed;
   top: 0; }
 
@@ -698,6 +724,9 @@ div .secondary {
       font-size: 1.6rem;
       text-decoration: none;
       color: white; }
+
+#top {
+  color: black; }
 
 /*--------------------------------------------------------------
 # Footer
@@ -1352,23 +1381,24 @@ body {
           .main-philosophy .philosophy-grid .philosophy-img img {
             left: 56px;
             top: 9px;
-            width: 175px;
-            height: 135px;
+            width: 190px;
+            height: 153px;
             -webkit-backface-visibility: hidden;
             backface-visibility: hidden; } }
     .main-philosophy .philosophy-grid h2 {
-      z-index: 1;
+      -index: 1;
       margin: 0;
       text-align: center;
       display: inline-block;
-      width: 90%;
+      width: 80%;
       color: #248e6a;
       height: auto;
       overflow: hidden;
       padding: 0;
-      bottom: 32px;
+      bottom: 35px;
       line-height: 1.3rem;
       position: absolute;
+      right: 24px;
       position: absolute; }
       .main-philosophy .philosophy-grid h2 a {
         color: #248E6A;
