--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -578,6 +578,10 @@ object {
 /*--------------------------------------------------------------
 # Page Templates
 --------------------------------------------------------------*/
+.site-content {
+  padding-top: 110px;
+  top: 0; }
+
 .main-navigation-container {
   display: -ms-flexbox;
   display: flex; }
@@ -644,6 +648,18 @@ div .menu-primary-menu-container {
 .responsive-menu-button {
   margin-top: 0.5rem !important; }
 
+.responsive-menu-inner, .responsive-menu-inner::before, .responsive-menu-inner::after {
+  background-color: #D8D8D8 !important;
+  width: 34px !important;
+  height: 4px !important;
+  border-radius: 0px !important; }
+
+button, input[type="button"], input[type="reset"], input[type="submit"] {
+  box-shadow: none !important; }
+
+button#responsive-menu-button {
+  background-color: transparent !important; }
+
 #primary-menu li.current-menu-item a {
   border-top: 6px solid #57B79F;
   color: #57B79F;
@@ -691,10 +707,6 @@ div .menu-primary-menu-container {
   width: 100%;
   background: #fff;
   position: fixed;
-  top: 0; }
-
-.site-content {
-  padding-top: 80px;
   top: 0; }
 
 .home .site-header {
