--- a/themes/montessori-theme/sass/_involved.scss
+++ b/themes/montessori-theme/sass/_involved.scss
@@ -10,8 +10,6 @@
 }
 
 .involved-title {
-
-
   color:#000;
   font-size: 20px;
   text-align: center;
@@ -21,12 +19,15 @@
   padding-top: 20px;
   display: flex;
   justify-content: space-between;
+  box-sizing: border-box;
 
-a{
-color:#000;
-}
+  }
+    a {
+      color:#000;
+    }
 
-}
+
+
 
 .green-button{
   background-color: #4FC8A1;
@@ -62,27 +63,29 @@ color:#000;
 .text-shadow {
     border-top: 3px solid #248e6a;
     width: 100%;
+    margin-bottom: 10px;
 }
 // This is for support now container
 
 
 
 .support-containar {
+display: flex;
 justify-content: center;
-// display: flex;
+
 
 
 }
  .support-img{
-   width:150px;
-   height: 150.60px;
-   display: inline-block;
+   width:150px 60px;
+    height: 160.50px;
+    align-self: center;
 
 
 }
     img{
-  width:100%;
-  height: 100%;
+
+    height: 100%;
 
 }
 
@@ -90,12 +93,11 @@ justify-content: center;
 
 .involved {
     .circle-btn {
-         width: 200px;
+        width: 200px;
         height: 178px;
         display: flex;
         height: 200px;
-        display: flex;
-        -webkit-border-radius: 150%;
+       -webkit-border-radius: 150%;
         -moz-border-radius: 150%;
         -ms-border-radius: 150%;
         -o-border-radius: 150%;
@@ -115,6 +117,7 @@ justify-content: center;
 
 
 
+
     }
 }
 
@@ -122,47 +125,46 @@ justify-content: center;
 // This for volenteer btn
 
 .re-btn {
-    width: 199.38px;
+    width: 175.38px;
     height: 47px;
     border-radius: 6px;
-    background-color:#CB203E ;;
+    background-color:#f76072;
     color: #fff;
-    margin-left: 20px;
+    margin-left:60px;
     padding: 10px;
     box-shadow: none;
     font-family: "Noto Sans";
-    font-size: 15px;
+
     font-weight: 300;
     text-shadow: none;
     letter-spacing: 0.8px;
     text-decoration: none;
-    width: 199.38px;
-    height: 27px;
     font-family: "Noto Sans";
-    font-size: 20px;
+    font-size: 15px;
     font-weight: bold;
     text-align: center;
     line-height: 27px;
-    margin:60px;
+    // margin:60px;
 
+}
+& hover {
+    background-color: red;
 }
 
 // This for donation
 .pink-btn {
-    // width: 185px;
-    // height: 47px;
+    width:175.38px;
+    height: 47px;
     background-color: #f76072;
     border-radius: 6px;
     font-family: "Noto Sans";
-    font-size: 20px;
     font-weight: bold;
     text-align: center;
     line-height: 30px;
     color: #fff;
-    margin-left: 20px;
+    margin-left: 60px;
     padding: 8px;
     box-shadow: none;
-    font-weight: 300;
     text-shadow: none;
     letter-spacing: 0.8px;
     text-decoration: none;
