--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -945,10 +945,9 @@ div .secondary {
             margin: 0;
             box-sizing: border-box;
             width: 1283px; } }
-<<<<<<< HEAD
       .site-main .support-wrapper .information .support-img-wrapper {
         text-align: center; }
-        @media (min-width: 48rem) {
+        @media (min-width: 60rem) {
           .site-main .support-wrapper .information .support-img-wrapper {
             display: inline-block;
             right: 40px;
@@ -966,28 +965,6 @@ div .secondary {
             margin: 45px; }
       .site-main .support-wrapper .information blockquote {
         border-left: 8px solid red; }
-=======
-      .site-main .support-wrapper .information img {
-        width: 287px;
-        height: 470px; }
-        @media (min-width: 60rem) {
-          .site-main .support-wrapper .information img {
-            float: right;
-            position: absolute;
-            right: 35px; } }
-        .site-main .support-wrapper .information img p {
-          width: 470px;
-          font-family: "Noto Sans";
-          font-size: 20px;
-          line-height: 46px;
-          color: #000;
-          margin: 45px; }
-          @media (min-width: 60rem) {
-            .site-main .support-wrapper .information img p {
-              float: right;
-              position: absolute;
-              right: 35px; } }
->>>>>>> c9ad4ec6aee2415b4e21184183c1d114783d8ea5
       .site-main .support-wrapper .information p {
         width: 377px;
         font-family: "Noto Sans";
@@ -1057,7 +1034,13 @@ div .secondary {
       width: 200px;
       box-sizing: border-box;
       height: 139.76px;
-      width: 480.27px; }
+      width: 480.27px;
+      position: relative;
+      border-radius: 10px;
+      font-family: 'Noto Sans';
+      font-size: 15px;
+      color: #000;
+      text-decoration: none; }
       .site-main .all-features .features-wrapper .features-flipper {
         position: relative;
         -webkit-transition: 1.9s;
@@ -1074,6 +1057,10 @@ div .secondary {
             flex-direction: row; }
         .site-main .all-features .features-wrapper .features-flipper:hover {
           transform: rotateY(180deg); }
+        .site-main .all-features .features-wrapper .features-flipper ::active {
+          transform: translate(0px, 5px);
+          -webkit-transform: translate(0px, 5px);
+          border-bottom: 1px solid; }
         .site-main .all-features .features-wrapper .features-flipper .front {
           height: auto;
           text-align: center;
@@ -1100,7 +1087,7 @@ div .secondary {
           bottom: 1px;
           background-color: #fff;
           transform: rotateY(180deg); }
-    .site-main .all-features .green-btn {
+    .site-main .all-features .features-green-btn {
       color: #248E6A;
       text-decoration: none; }
 
@@ -1473,9 +1460,11 @@ li {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: justify;
-      justify-content: space-between; }
-  .involved-title a {
-    color: #000; }
+      justify-content: space-between;
+  box-sizing: border-box; }
+
+a {
+  color: #000; }
 
 .green-button {
   background-color: #4FC8A1;
@@ -1494,19 +1483,23 @@ li {
 
 .text-shadow {
   border-top: 3px solid #248e6a;
-  width: 100%; }
+  width: 100%;
+  margin-bottom: 10px; }
 
 .support-containar {
+  display: -ms-flexbox;
+  display: flex;
   -ms-flex-pack: center;
       justify-content: center; }
 
 .support-img {
-  width: 150px;
-  height: 150.60px;
-  display: inline-block; }
+  width: 150px 60px;
+  height: 160.50px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center; }
 
 img {
-  width: 100%;
   height: 100%; }
 
 .involved .circle-btn {
@@ -1515,7 +1508,6 @@ img {
   display: -ms-flexbox;
   display: flex;
   height: 200px;
-  display: flex;
   border-radius: 150%;
   background-color: #4fc8a1;
   margin: 130px;
@@ -1529,42 +1521,41 @@ img {
   line-height: 27px; }
 
 .re-btn {
-  width: 199.38px;
+  width: 175.38px;
   height: 47px;
   border-radius: 6px;
-  background-color: #CB203E;
+  background-color: #f76072;
   color: #fff;
-  margin-left: 20px;
+  margin-left: 60px;
   padding: 10px;
   box-shadow: none;
   font-family: "Noto Sans";
-  font-size: 15px;
   font-weight: 300;
   text-shadow: none;
   letter-spacing: 0.8px;
   text-decoration: none;
-  width: 199.38px;
-  height: 27px;
   font-family: "Noto Sans";
-  font-size: 20px;
+  font-size: 15px;
   font-weight: bold;
   text-align: center;
-  line-height: 27px;
-  margin: 60px; }
+  line-height: 27px; }
+
+hover {
+  background-color: red; }
 
 .pink-btn {
+  width: 175.38px;
+  height: 47px;
   background-color: #f76072;
   border-radius: 6px;
   font-family: "Noto Sans";
-  font-size: 20px;
   font-weight: bold;
   text-align: center;
   line-height: 30px;
   color: #fff;
-  margin-left: 20px;
+  margin-left: 60px;
   padding: 8px;
   box-shadow: none;
-  font-weight: 300;
   text-shadow: none;
   letter-spacing: 0.8px;
   text-decoration: none; }
